--- a/main.html
+++ b/main.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+
+
+	<form method="post">
+				<label for="Name">Name</label>
+				<input type="text" id="name" name="name" minlength="3", maxlength="50" required><br>
+
+				<label for="portfolio">portfolio</label>
+				<input type="url" id="portfolio" name="portfolio" required><br>
+
+				<label for="favColor">Favorite Color</label>
+				<input type="color" id="favColor"><br>
+
+				<label for="likeness">Likeness</label>
+				<input type="range" min="1" max="100"><br>
+
+				<input type="submit" value="Submit">
+	</form>
+
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
