--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 
 <h1>Feedback Form</h1>
 	<form method="post">
-				<label for="Name">Name</label>
+				<label for="name">Name</label>
 				<input type="text" id="name" name="name" minlength="3", maxlength="50" required><br>
 
 				<label for="portfolio">portfolio</label>
