--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 				<input type="color" id="favColor"><br>
 
 				<label for="likeness">Likeness</label>
-				<input type="range" min="1" max="100"><br>
+				<input type="range" id="likeness" min="1" max="100"><br>
 
 				<input type="submit" value="Submit">
 	</form>
